--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,34 +1,39 @@
 .body {
     margin: auto;
-    background-color: white;
+    width: 100%;
+    background-color: black;
 }
 
 .header {
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    display: flex;
-    position: fixed;
+    width: 80%;
+    height: 100px;
+    display: contents;
+    text-transform: uppercase;
 }
 
 .header__img {
     width: 85px;
-    margin-left: 30px;
 }
 
 .header__menu {
-    margin-right: 30px;
-    
+    width: 1200px;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    font-size: 10px;
+    letter-spacing: 2px;
 }
 
 .header__menu ul {
     
     list-style: none;
     display: flex;
+    padding: inherit;
+    margin: auto;
 }
 
 .header__menu li {
-    margin: 10px 10px;
+    margin: 50px;
 }
 .header__menu li a {
     color: #DAC858;
@@ -52,5 +57,39 @@
 }
 
 .container img {
+    width: 80%;
+    margin: auto;
+    display: flex;
+}
+    
+
+
+.container p {
+    display: flex;
+}
+
+/*Agregamos una nueva area con contenido */
+
+.textarea {
     width: 100%;
+    height: 250px;
+    background-color: black;
+    position: absolute;
+}
+
+.textarea h1 {
+    color: #DAC858;
+    text-align: center;
+    font-size: 20px;
+    font-style: italic;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.textarea p {
+    color: white;
+    width: 350px;
+    text-align: center;
+    margin: auto;
 }
