--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -5,7 +5,7 @@
 }
 
 .header {
-    width: 80%;
+    width: 100%%;
     height: 100px;
     display: contents;
     text-transform: uppercase;
@@ -16,7 +16,7 @@
 }
 
 .header__menu {
-    width: 1200px;
+    width: 100%;
     display: flex;
     align-items: center;
     margin: auto;
@@ -52,8 +52,11 @@
 /* empezamos a escribir el estilo del contenido de index */
 
 .container {
-    width: 70%;
-    display: contents;
+    width: 100%;
+    position: relative;
+    display: flex;
+    text-align: center;
+    margin: auto;
 }
 
 .container img {
@@ -61,35 +64,27 @@
     margin: auto;
     display: flex;
 }
-    
-
-
-.container p {
-    display: flex;
-}
 
 /*Agregamos una nueva area con contenido */
 
-.textarea {
-    width: 100%;
-    height: 250px;
-    background-color: black;
+.container__title {
     position: absolute;
-}
-
-.textarea h1 {
     color: #DAC858;
-    text-align: center;
-    font-size: 20px;
-    font-style: italic;
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
+    text-align: left;
+    letter-spacing: 2px;
+    font-size: 35px;
+    top: 100px;
+    left: 250px;
 }
 
-.textarea p {
-    color: white;
-    width: 350px;
-    text-align: center;
+.container__text {
+    color: #DAC858;
+    width: 400px;
+    text-align: left;
     margin: auto;
+    position: absolute;
+    top: 28%;
+    left: 250px;
+    letter-spacing: 1px;
+    font-size: 15px;
 }
