--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -5,7 +5,7 @@
 }
 
 .header {
-    width: 100%%;
+    width: 100%;
     height: 100px;
     display: contents;
     text-transform: uppercase;
@@ -91,8 +91,9 @@
 
 /*containertwo*/
 
-.images {
+.containerTwo {
     width: 100%;
+    height: 500px;
     position: relative;
     display: flex;
     text-align: center;
@@ -100,11 +101,101 @@
     top: 20px;
 }
 
-.images img {
+.containerTwo__img {
     width: 50%;
+    height: 920px;
     margin: auto;
     display: flex;
     position: absolute;
     left: 135px;
 }
 
+.containerTwo__img2 {
+    width: 30%;
+    margin: auto;
+    display: flex;
+    position: absolute;
+    left: 60%;
+}
+
+.containerTwo__img3 {
+    width: 30%;
+    margin: auto;
+    display: flex;
+    position: absolute;
+    left: 60%;
+    top: 290px;
+}
+
+.containerTwo__img4 {
+    width: 30%;
+    margin: auto;
+    display: block;
+    position: absolute;
+    left: 60%;
+    top: 642px;
+}
+
+.texto {
+    color: #DAC858;
+    width: 80%;
+    text-align: center;
+    margin: auto;
+    letter-spacing: 1px;
+    font-size: 15px;
+    margin-top: 465px;
+}
+
+.texto h1 {
+    color: #DAC858;
+    text-align: center;
+    letter-spacing: 2px;
+    font-size: 35px;
+}
+
+.containerTree{
+    width: 100%;
+    height: 500px;
+    position: relative;
+    display: flex;
+    text-align: center;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.containerTree__img {
+    width: 80%;
+    height: inherit;
+    margin: auto;
+    display: flex;
+    position: absolute;
+    left: 135px;
+    top: 15px;
+}
+
+.footer {
+    background-color: #3D4D55;
+    width: 100%;
+    height: 250px;
+    margin: auto;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: auto;
+}
+
+.footer__img {
+    width: 85px;
+    margin: auto;
+}
+
+.footer__menu li {
+    display: flex;
+    margin-top: 80px;
+}
